# scale-relay

./: .gitignore  AGENTS.md  README.md  config.example.yaml  pyproject.toml
data/: measurements.sqlite3
docs/: development.md  requirements.md  xiaomi_s400_ble_local_collection_runbook.md
scripts/: install-systemd-service.sh  scale-relay.service.template
src/scale_relay/: __init__.py  cli.py  config.py  doctor.py  errors.py  events.py  message.py  models.py  security.py  service.py
src/scale_relay/ble/: __init__.py  xiaomi_s400.py
src/scale_relay/history/: __init__.py  stats.py  store.py
src/scale_relay/sinks/: __init__.py  base.py  factory.py  hermes_webhook.py  stdout.py
src/scale_relay/xiaomi_cloud/: __init__.py  client.py  extract_key.py  models.py  rc4.py  session_store.py
tests/: test_ble_xiaomi_s400.py  test_config.py  test_doctor.py  test_hermes_webhook.py  test_history.py  test_message.py  test_models.py  test_xiaomi_cloud.py
