[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scale-relay"
version = "0.1.0"
description = "Local Xiaomi S400 weight scale relay for Hermes Agent Webhook."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "bleak>=0.22",
  "xiaomi-ble>=1.14",
  "bluetooth-sensor-state-data>=1.9",
  "httpx>=0.27",
  "pyyaml>=6.0",
  "pydantic>=2.0",
  "typer>=0.12",
  "rich>=13.0",
]

[project.scripts]
scale-relay = "scale_relay.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["scale_relay"]
